--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb
+spring.datasource.username =root
+spring.datasource.password =root
+spring.jpa.database-platform =org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto =none
+spring.jpa.hibernate.show-sql =true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
