--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springdb
-spring.datasource.username =root
-spring.datasource.password =root
+spring.datasource.url=${DB_URL}
+spring.datasource.username =${DB_USER}
+spring.datasource.password =${DB_PSW}
 spring.jpa.database-platform =org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto =none
 spring.jpa.hibernate.show-sql =true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=5000
